--- a/soybean-admin-backend/package.json
+++ b/soybean-admin-backend/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.16.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
