--- a/soybean-admin-backend/package.json
+++ b/soybean-admin-backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
     "seed": "ts-node -r tsconfig-paths/register src/database/seeds/seed.ts",
+    "seed:prod": "node dist/database/seeds/seed",
     "migration:generate": "npm run build && npx typeorm migration:generate -d dist/typeorm.config.js",
     "migration:run": "npm run build && npx typeorm migration:run -d dist/typeorm.config.js",
     "migration:revert": "npm run build && npx typeorm migration:revert -d dist/typeorm.config.js",
