chore: update code

--- a/soybean-admin-frontend/package.json
+++ b/soybean-admin-frontend/package.json
@@ -60,6 +60,7 @@
     "defu": "6.1.4",
     "echarts": "6.0.0",
     "json5": "2.2.3",
+    "material-symbols": "^0.40.2",
     "naive-ui": "2.43.2",
     "nprogress": "0.2.0",
     "pinia": "3.0.4",
